# q-cap

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bootstrap_qcap_repo.sh
.github/workflows/: ci.yml
api/proto/: qcap.proto
core/qcap-cli/: Cargo.toml
core/qcap-cli/src/: main.rs
core/qcap-core/: Cargo.toml
core/qcap-core/src/: lib.rs
docs/: overview.md
sdks/ts/: package.json
sdks/ts/src/: index.ts
services/qcap-registry/: go.mod  main.go
