[package]
name = "qcap-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
blake3 = "1"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
